--- a/MvvmTestDemo/DemoViews/DateTimePickerDemo.xaml
+++ b/MvvmTestDemo/DemoViews/DateTimePickerDemo.xaml
@@ -8,8 +8,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <ScrollViewer Width="{StaticResource DemosViewViewDefaultWidth}">
-        <Grid>
+    <ScrollViewer>
+        <Grid Width="{StaticResource DemoViewsDefaultWidth}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
