--- a/MvvmTestDemo/DemoViews/FieldsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/FieldsDemo.xaml
@@ -10,7 +10,7 @@
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
     <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="{StaticResource DemosViewViewDefaultWidth}">
+        <StackPanel Width="{StaticResource DemoViewsDefaultWidth}" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="TextBox:" FontSize="20" FontWeight="DemiBold" Margin="0,0,0,10"/>
             <WrapPanel>
                 <TextBox Width="300" Height="34" BorderThickness="1"
