--- a/MvvmTestDemo/UserControls/OverViewDemo.xaml
+++ b/MvvmTestDemo/UserControls/OverViewDemo.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:MvvmTestDemo.UserControls"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:vm="clr-namespace:MvvmTestDemo.DemoViewModels"
              prism:ViewModelLocator.AutoWireViewModel="True"
              d:DataContext="{Binding Source={d:DesignInstance Type=vm:OverViewDemoViewModel}}"
@@ -13,6 +14,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
+        <vm:OverViewDemoViewModel x:Key="VMM"/>
+
         <Style x:Key="ButtonStyles" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonContentWithIconStyle}">
             <Setter Property="Width" Value="250" />
             <Setter Property="Height" Value="40" />
@@ -148,7 +151,37 @@
                     <pc:DotLineLoading Width="800" Style="{StaticResource DotLineLoadingRunAsContantStyle}" Margin="0,20" />
                 </WrapPanel>
             </GroupBox>
-            
+            <TreeView Grid.Row="3" ItemsSource="{Binding TreeViewTests}" Height="100" MouseDoubleClick="TreeView_MouseDoubleClick">
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding Children}">
+                        <HierarchicalDataTemplate.ItemTemplate>
+                            <HierarchicalDataTemplate ItemsSource="{Binding Children}">
+                                <HierarchicalDataTemplate.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Header}"/>
+                                    </DataTemplate>
+                                </HierarchicalDataTemplate.ItemTemplate>
+                                <TextBlock Text="{Binding Header}"/>
+                            </HierarchicalDataTemplate>
+                        </HierarchicalDataTemplate.ItemTemplate>
+                        <TextBlock Text="{Binding Header}"/>
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+                <behavior:Interaction.Triggers>
+                    <behavior:EventTrigger EventName="TreeView.TreeViewItem.Expanded">
+                        <behavior:InvokeCommandAction Command="{Binding TreeViewItemExpandedCommand}"/>
+                    </behavior:EventTrigger>
+                    <behavior:EventTrigger EventName="TreeView.TreeViewItem.Selected">
+                        <behavior:InvokeCommandAction PassEventArgsToCommand="True" Command="{Binding TreeViewItemSelectedItemCommand}"/>
+                    </behavior:EventTrigger>
+                    <behavior:EventTrigger EventName="SelectedItemChanged">
+                        <behavior:InvokeCommandAction PassEventArgsToCommand="True" Command="{Binding TreeViewSelectedItemCommand}"/>
+                    </behavior:EventTrigger>
+                    <behavior:EventTrigger EventName="MouseDoubleClick">
+                        <behavior:InvokeCommandAction Command="{Binding TreeViewDoubleClickCommand}"/>
+                    </behavior:EventTrigger>
+                </behavior:Interaction.Triggers>
+            </TreeView>
         </Grid>
     </ScrollViewer>
 
