--- a/MvvmTestDemo/MainWindow.xaml
+++ b/MvvmTestDemo/MainWindow.xaml
@@ -83,7 +83,7 @@
             </ListBox>
             <ContentControl Grid.Column="1" Content="{Binding ControlContent}" />
         </Grid>
-        <!--<local:BlockBarDemo/>-->
+        <!--<local:TreeViewDemo/>-->
 
         <!--接收BubbleMessage的容器-->
         <ScrollViewer VerticalScrollBarVisibility="Hidden" Margin="0,10,10,10" HorizontalAlignment="Right" VerticalAlignment="Top">
