--- a/MvvmTestDemo/MainWindow.xaml
+++ b/MvvmTestDemo/MainWindow.xaml
@@ -4,7 +4,8 @@
                   xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                   xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif"
-                  xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
+                  xmlns:local="clr-namespace:MvvmTestDemo"
+                  xmlns:view="clr-namespace:MvvmTestDemo.DemoViews"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
                   xmlns:prism="http://prismlibrary.com/"
@@ -39,8 +40,8 @@
     <pc:SideBarWindow.ClientTitleBarAdditionalContent>
         <Button Command="{Binding HomePageCommand}" ToolTip="主页" 
                 pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource HomePageGeometry}"
-                pc:FrameworkElementBaseAttached.IconWidth="18"
-                pc:FrameworkElementBaseAttached.IconHeight="18"
+                pc:FrameworkElementBaseAttached.IconWidth="18" 
+                pc:FrameworkElementBaseAttached.IconHeight="18" 
                 Style="{StaticResource WindowIconButtonStyle}"/>
     </pc:SideBarWindow.ClientTitleBarAdditionalContent>
 
@@ -83,7 +84,7 @@
             </ListBox>
             <ContentControl Grid.Column="1" Content="{Binding ControlContent}" />
         </Grid>
-        <!--<local:TreeViewDemo/>-->
+        <!--<view:ThreeDimensionalControlsDemo Visibility="Collapsed"/>-->
 
         <!--接收BubbleMessage的容器-->
         <ScrollViewer VerticalScrollBarVisibility="Hidden" Margin="0,10,10,10" HorizontalAlignment="Right" VerticalAlignment="Top">
