--- a/CookPopularControl/Themes/BaseStyle/DragableTabControlBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/DragableTabControlBaseStyle.xaml
@@ -185,6 +185,7 @@
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForeground}"/>
         <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}"/>
+        <Setter Property="Margin" Value="0"/>
         <Setter Property="Padding" Value="6,2"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="VerticalContentAlignment" Value="Stretch"/>
@@ -194,9 +195,6 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type drag:DragableItem}">
                     <Grid x:Name="templateRoot" SnapsToDevicePixels="True">
-                        <!--<Border x:Name="mainBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0" Background="{TemplateBinding Background}" Margin="0 0 0 1">
-                            <Border x:Name="innerBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0" Background="Transparent" Margin="-1" Opacity="0"/>
-                        </Border>-->
                         <Border x:Name="mainBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,1,1,0" Background="{TemplateBinding Background}" Margin="0,0,0,2">
                             <Border x:Name="innerBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,1,1,0" Background="{TemplateBinding Background}" Margin="-1" Opacity="0"/>
                         </Border>
@@ -746,10 +744,11 @@
                             Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="True">
                         <ScrollViewer Width="{TemplateBinding ActualWidth}" Height="{TemplateBinding ActualHeight}"
                                       HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                            <ItemsPresenter Width="{TemplateBinding ItemsPresenterWidth}" Height="{TemplateBinding ItemsPresenterHeight}"
+                            <ItemsPresenter Width="{TemplateBinding ItemsPresenterWidth}" 
+                                            Height="{TemplateBinding ItemsPresenterHeight}"
                                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                            HorizontalAlignment="Left"
+                                            VerticalAlignment="Top"/>
                         </ScrollViewer>
                     </Border>
                 </ControlTemplate>
@@ -764,6 +763,7 @@
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForeground}"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="2"/>
 
         <Setter Property="HeaderPrefixContent" Value="😀" />
         <Setter Property="HeaderSuffixContent" Value="😂" />
@@ -949,6 +949,36 @@
                 </Setter>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="DragableItemsControlBaseStyle" TargetType="{x:Type drag:DragableItemsControl}">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Top" />
+        <Setter Property="ItemsPanel">
+            <Setter.Value>
+                <ItemsPanelTemplate>
+                    <Canvas IsItemsHost="True"/>
+                </ItemsPanelTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type drag:DragableItemsControl}">
+                    <Border BorderThickness="{TemplateBinding Border.BorderThickness}" Padding="{TemplateBinding Control.Padding}" BorderBrush="{TemplateBinding Border.BorderBrush}" Background="{TemplateBinding Panel.Background}" SnapsToDevicePixels="True">
+                        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
+                                      Width="{TemplateBinding ActualWidth}"
+                                      Height="{TemplateBinding ActualHeight}"
+                                      Background="{x:Null}">
+                            <ItemsPresenter SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}"
+                                            HorizontalAlignment="Left"
+                                            VerticalAlignment="Top"
+                                            Width="{TemplateBinding ItemsPresenterWidth}"
+                                            Height="{TemplateBinding ItemsPresenterHeight}"/>
+                        </ScrollViewer>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
