--- a/CookPopularControl/Themes/MenuStyle.xaml
+++ b/CookPopularControl/Themes/MenuStyle.xaml
@@ -36,12 +36,28 @@
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="MinHeight" Value="1"/>
         <Setter Property="SnapsToDevicePixels" Value="true"/>
-        <Setter Property="Height" Value="10"/>
+        <Setter Property="Height" Value="2"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Separator}">
-                    <Rectangle Height="1.5" Fill="{TemplateBinding Background}"
+                    <Rectangle Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Fill="{TemplateBinding Background}"
                                HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="VerticalSeparatorStyle" TargetType="{x:Type Separator}">
+        <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="MinWidth" Value="1"/>
+        <Setter Property="SnapsToDevicePixels" Value="true"/>
+        <Setter Property="Width" Value="2"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Separator}">
+                    <Rectangle Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Fill="{TemplateBinding Background}"
+                               HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -49,7 +65,7 @@
 
     <Style x:Key="{x:Type MenuItem}" TargetType="{x:Type MenuItem}"> 
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=MenuBase},Path=Foreground}" />
-        <Setter Property="Padding" Value="24,0" />
+        <Setter Property="Padding" Value="10,0" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="ripple:RippleAssist.Feedback" Value="#FFFFFF" />
         <Setter Property="Template">
@@ -72,13 +88,13 @@
                                         <ColumnDefinition Width="*" SharedSizeGroup="HeaderGroup"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
-                                    <Grid x:Name="IconWrapper" Visibility="Visible" Width="40">
+                                    <Grid x:Name="IconWrapper" Visibility="Visible" Margin="10,0">
                                         <ContentPresenter x:Name="Icon" Height="16" Width="16"
                                                           Content="{TemplateBinding Icon}" ContentSource="Icon"
                                                           HorizontalAlignment="Left" VerticalAlignment="Center"
                                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                                     </Grid>
-                                    <Grid x:Name="GlyphWrapper" Visibility="Collapsed" Width="40">
+                                    <Grid x:Name="GlyphWrapper" Visibility="Collapsed" Margin="10,0">
                                         <Viewbox x:Name="GlyphPanel" Width="16" Height="16" FlowDirection="LeftToRight"
                                                  HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="Collapsed">
                                             <Grid Width="24" Height="24">
