--- a/MvvmTestDemo/UserControls/AdornerDemo.xaml
+++ b/MvvmTestDemo/UserControls/AdornerDemo.xaml
@@ -5,11 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              xmlns:local="clr-namespace:MvvmTestDemo.UserControls"
-             mc:Ignorable="d" x:Name="RootDecorator" Background="#FF9C8844"
-             d:DesignHeight="450" d:DesignWidth="800" Focusable="True"
-             Width="400" Height="400">
+             mc:Ignorable="d" x:Name="RootDecorator" 
+             d:DesignHeight="450" d:DesignWidth="800" Focusable="True">
 
-    <StackPanel x:Name="RootGrid" VerticalAlignment="Center">
+    <StackPanel x:Name="RootGrid" HorizontalAlignment="Left" Width="400" Height="400" Background="#FF9C8844">
         <Button x:Name="ChanceBtn" Content="Chance" Width="300" Height="40"/>
         <TextBox x:Name="ChanceTxt" Text="Chance" Width="300" Height="40" Margin="0,50"/>
         <Button Content="CloseDialogBox" Width="300" Height="40" Command="{x:Static pc:DialogBox.CloseDialogCommand}"/>
