--- a/CookPopularControl/Themes/WindowStyle.xaml
+++ b/CookPopularControl/Themes/WindowStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:win="clr-namespace:CookPopularControl.Controls.Windows"
+                    xmlns:win="clr-namespace:CookPopularControl.Controls"
                     xmlns:panel="clr-namespace:CookPopularControl.Controls.Panels"
                     xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
                     xmlns:toolConverters="clr-namespace:CookPopularControl.Tools.Windows.Converters"
@@ -247,6 +247,90 @@
                         </Trigger>
                         <Trigger Property="IsNonClientActive" Value="False">
                             <Setter Property="ClientTitleBarBackground" Value="{DynamicResource UnEnabledBrush}"/>
+                        </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="ResizeMode" Value="CanResizeWithGrip"/>
+                                <Condition Property="WindowState" Value="Normal" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Visibility" Value="Visible" TargetName="ResizeGrip" />
+                        </MultiTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="NoneTitleBarWindowStyle" TargetType="{x:Type win:NoneTitleBarWindow}" BasedOn="{StaticResource DefaultNormalWindowStyle}">
+        <Setter Property="IsShowClientTitleBar" Value="False" />
+        <Setter Property="ClientTitleBarHeight" Value="0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type win:NoneTitleBarWindow}">
+                    <AdornerDecorator CacheMode="{DynamicResource DefaultBitmapCache}" SnapsToDevicePixels="True">
+                        <win:ChromeWindowClient>
+                            <Border x:Name="RootBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
+                                    Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                                <behavior:Interaction.Triggers>
+                                    <behavior:EventTrigger EventName="MouseLeftButtonDown">
+                                        <behavior:InvokeCommandAction Command="{x:Static win:NoneTitleBarWindow.MoveWindowCommand}" />
+                                    </behavior:EventTrigger>
+                                </behavior:Interaction.Triggers>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=ClientTitleBarHeight}"/>
+                                        <RowDefinition />
+                                    </Grid.RowDefinitions>
+                                    <Grid Grid.Row="0" x:Name="PART_TitleBarArea" TextElement.Foreground="{TemplateBinding ClientTitleBarForeground}" Background="{TemplateBinding ClientTitleBarBackground}"/>
+                                    <AdornerDecorator Grid.Row="1">
+                                        <panel:SimpleGrid>
+                                            <ContentPresenter ClipToBounds="True"/>
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Background="{TemplateBinding ClientTitleBarBackground}">
+                                                <Button x:Name="MinimizedButton" Width="30" Height="30" Command="{x:Static SystemCommands.MinimizeWindowCommand}" ToolTip="最小化"
+                                                    attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource MinimizeGeometry}"
+                                                    Style="{StaticResource WindowIconButtonStyle}"/>
+                                                <Button x:Name="MaximizedButton" Width="30" Height="30" Command="{x:Static SystemCommands.MaximizeWindowCommand}" ToolTip="最大化"
+                                                    attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource MaximizeGeometry}"
+                                                    Style="{StaticResource WindowIconButtonStyle}"/>
+                                                <Button x:Name="NormalButton" Width="30" Height="30" Command="{x:Static SystemCommands.RestoreWindowCommand}" ToolTip="向下还原" Visibility="Collapsed"
+                                                    attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource RestoreGeometry}"
+                                                    Style="{StaticResource WindowIconButtonStyle}"/>
+                                                <Button x:Name="CloseButton" Width="30" Height="30" Command="{x:Static SystemCommands.CloseWindowCommand}" ToolTip="关闭"
+                                                    attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}"
+                                                    Style="{StaticResource WindowIconButtonStyle}"/>
+                                            </StackPanel>
+                                        </panel:SimpleGrid>
+                                    </AdornerDecorator>
+                                    <ResizeGrip Grid.Row="1" x:Name="ResizeGrip" Width="10" Height="10" WindowChrome.ResizeGripDirection="BottomRight"
+                                                HorizontalAlignment="Right" VerticalAlignment="Bottom" IsTabStop="False" Visibility="Collapsed"
+                                                Style="{StaticResource DefaultResizeGripStyle}"/>
+                                </Grid>
+                            </Border>
+                        </win:ChromeWindowClient>
+                    </AdornerDecorator>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="WindowState" Value="Maximized">
+                            <Setter Property="Visibility" Value="Visible" TargetName="NormalButton"/>
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="MaximizedButton"/>
+                        </Trigger>
+                        <Trigger Property="WindowState" Value="Normal">
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="NormalButton"/>
+                            <Setter Property="Visibility" Value="Visible" TargetName="MaximizedButton"/>
+                        </Trigger>
+                        <Trigger Property="ResizeMode" Value="NoResize">
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="MinimizedButton"/>
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="MaximizedButton"/>
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="NormalButton"/>
+                        </Trigger>
+                        <Trigger Property="ResizeMode" Value="CanMinimize">
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="MaximizedButton"/>
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="NormalButton"/>
+                        </Trigger>
+                        <Trigger Property="IsNonClientActive" Value="False">
+                            <Setter Property="ClientTitleBarBackground" Value="{DynamicResource UnEnabledBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsShowClientTitleBar" Value="False">
+                            <Setter Property="ClientTitleBarHeight" Value="0" />
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
